@@ -10,7 +10,7 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class Repository implements IRepo {
-    private LinkedList<PrgState> states;
+    private List<PrgState> states;
     private IStmt originalProgram;
     private String fileName;
 
@@ -31,8 +31,8 @@ public class Repository implements IRepo {
 
     @Override
     public PrgState getCrtPrg() {
-        PrgState state =  states.getFirst();
-        states.removeFirst();
+        PrgState state =  states.get(0);
+        states.remove(0);
         return state;
     }
 
@@ -53,6 +53,6 @@ public class Repository implements IRepo {
 
     @Override
     public void addState(PrgState state) {
-        states.addLast(state);
+        states.add(state);
     }
 }
